#508 file icon was added

--- a/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/css/fontello/config.json
+++ b/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/css/fontello/config.json
@@ -7,22 +7,52 @@
   "ascent": 850,
   "glyphs": [
     {
-      "uid": "70370693ada58ef0a60fa0984fe8d52a",
-      "css": "plus",
-      "code": 43,
-      "src": "entypo"
+      "uid": "5408be43f7c42bccee419c6be53fdef5",
+      "css": "doc-text",
+      "code": 61686,
+      "src": "fontawesome"
     },
     {
-      "uid": "e45a3da2ebde8bc8e30a873f3bd51f30",
-      "css": "eye",
-      "code": 57501,
-      "src": "elusive"
-    },
-    {
-      "uid": "d218294e6f9f7191f6b0b3d1ff6239ff",
+      "uid": "1cc59577645c3f8eac921186fd4d9cc9",
       "css": "eye-off",
       "code": 57602,
-      "src": "elusive"
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M0 524Q6 475 64 414 143 334 240 286 369 225 500 225 529 225 559 227L633 98Q643 82 656 80 660 80 664 82L715 114Q732 121 717 147L660 248 613 327 572 399 428 649 387 721 340 801 283 901Q268 926 252 916L199 885Q184 877 199 852L248 766 240 762Q137 709 64 633 0 561 0 524ZM264 524Q264 598 311 657L359 573Q350 549 350 524 350 473 384 433T469 383L518 299 500 299Q402 299 333 365T264 524ZM441 819L482 748 500 748Q598 748 667 683T736 524Q736 450 689 391L752 282Q754 284 756 285T760 286Q863 338 936 414 1000 487 1000 524 994 573 936 633 857 713 760 762 631 823 500 823 475 823 441 819ZM531 664L641 475Q650 500 650 524 650 575 616 614T531 664Z",
+        "width": 1000
+      },
+      "search": [
+        "eye-off"
+      ]
+    },
+    {
+      "uid": "09fa2f9a9a8100c17dc2bacdf3d3e7f0",
+      "css": "eye",
+      "code": 57501,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M0 500Q6 451 64 390 143 310 240 261 369 201 500 201 637 203 760 261 863 314 936 390 1000 463 1000 500 994 549 936 609 857 689 760 738 631 799 500 799 363 797 240 738 137 685 64 609 0 537 0 500ZM264 500Q264 594 333 659T500 724 667 659 736 500 667 341 500 275 333 341 264 500ZM350 499Q350 439 394 397T500 355 606 397 650 499 606 601 500 644 394 601 350 499Z",
+        "width": 1000
+      },
+      "search": [
+        "eye"
+      ]
+    },
+    {
+      "uid": "dc5d4a388b7b9df2e8c3f26cdba69e09",
+      "css": "plus",
+      "code": 43,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M550 450Q580 450 580 500T550 550L340 550 340 760Q340 790 290 790T240 760L240 550 30 550Q0 550 0 500T30 450L240 450 240 240Q240 210 290 210T340 240L340 450 550 450Z",
+        "width": 580
+      },
+      "search": [
+        "plus"
+      ]
     }
   ]
 }
