#508 icon-cancel-circled2 was added

--- a/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/css/fontello/config.json
+++ b/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/css/fontello/config.json
@@ -53,6 +53,12 @@
       "search": [
         "plus"
       ]
+    },
+    {
+      "uid": "74415da8e36ed0afcea9b2b1454f4176",
+      "css": "cancel-circled2",
+      "code": 57421,
+      "src": "elusive"
     }
   ]
 }
