#572 added new icons for record button

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/fontello/config.json
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/fontello/config.json
@@ -67,6 +67,24 @@
       "src": "websymbols"
     },
     {
+      "uid": "0f99ab40ab0b4d64a74f2d0deeb03e42",
+      "css": "videocam",
+      "code": 127909,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "fa92c2529910e6958311b673ebf307e2",
+      "css": "videocam-1",
+      "code": 57621,
+      "src": "typicons"
+    },
+    {
+      "uid": "40c6538b0fd40540bf78373f8a1fb7af",
+      "css": "videocam-2",
+      "code": 61498,
+      "src": "mfglabs"
+    },
+    {
       "uid": "6c77e8afcd0e694c523eba8649428cc5",
       "css": "volume-off",
       "code": 57356,
@@ -92,6 +110,146 @@
       },
       "search": [
         "volume-down"
+      ]
+    },
+    {
+      "uid": "a7afea7a3931293d53f7019aeda42ea3",
+      "css": "attention",
+      "code": 9888,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M1113 920Q1113 959 1086 980T1018 1000H95Q55 1000 28 979T0 920Q0 890 18 859L479 55Q512 0 557 0T633 55L1095 860Q1113 892 1113 920ZM626 409V263H487V409Q487 423 489 435T495 463 500 490L526 652H585L612 490Q614 480 618 464T624 435 626 409ZM626 796Q626 767 606 747T556 727Q528 727 508 747T487 796 508 845 556 866Q585 866 606 845T626 796Z",
+        "width": 1113
+      },
+      "search": [
+        "attention"
+      ]
+    },
+    {
+      "uid": "3900bc6bf221ccd7f78eaa0fff132f64",
+      "css": "plus-circled",
+      "code": 10133,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M679 536V464Q679 450 668 439T643 429H500V286Q500 271 489 261T464 250H393Q378 250 368 261T357 286V429H214Q200 429 189 439T179 464V536Q179 550 189 561T214 571H357V714Q357 729 368 739T393 750H464Q479 750 489 739T500 714V571H643Q657 571 668 561T679 536ZM857 500Q857 617 800 715T644 871 429 929 213 871 58 715 0 500 58 285 213 129 429 71 644 129 800 285 857 500Z",
+        "width": 857.1
+      },
+      "search": [
+        "plus-circled"
+      ]
+    },
+    {
+      "uid": "3ab41ccdb13969578b7410248174a270",
+      "css": "volume-off",
+      "code": 57356,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M0 299L305 299 650 17 650 982 305 703 76 703ZM713 582Q713 578 715 576L791 500 715 424Q713 422 713 418T715 412L768 359Q770 357 773 357T779 359L855 435 932 359Q936 357 938 357T943 359L998 412Q1000 414 1000 418T998 424L922 500 998 576Q1000 580 1000 583T998 588L943 642Q941 644 938 644T932 642L855 564 779 642Q777 644 774 644T768 642L715 588Q713 586 713 582Z",
+        "width": 1000
+      },
+      "search": [
+        "volume-off"
+      ]
+    },
+    {
+      "uid": "8d278c8114fa6a687906100246d06362",
+      "css": "volume-down",
+      "code": 57357,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M0 709L0 291 236 291 594 0 594 1000 236 709 0 709ZM656 672Q730 598 730 498 730 394 656 318L729 244Q832 350 836 500 836 644 729 746Z",
+        "width": 836
+      },
+      "search": [
+        "volume-down"
+      ]
+    },
+    {
+      "uid": "08ad4422051617ac5fe5d97196a0a356",
+      "css": "video",
+      "code": 57362,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M0 879L0 121 1000 121 1000 879 0 879ZM123 756L877 756 877 244 123 244 123 756ZM389 674L389 334 682 504Z",
+        "width": 1000
+      },
+      "search": [
+        "video"
+      ]
+    },
+    {
+      "uid": "1f71503ec48fa26d5c5dc3e8f9cfe3a4",
+      "css": "cancel-circled2",
+      "code": 57421,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M0 500Q0 293 147 146T500 0 854 146 1000 500 854 854 500 1000 147 854 0 500ZM109 500Q109 662 224 776T500 891 776 776 891 500 776 224 500 109 224 224 109 500ZM254 637L391 500 254 363 363 254 500 391 637 254 746 363 609 500 746 637 637 746 500 609 363 746Z",
+        "width": 1000
+      },
+      "search": [
+        "cancel-circled2"
+      ]
+    },
+    {
+      "uid": "4f8bcc723d51df080fd9678ac626c713",
+      "css": "arrows-cw",
+      "code": 57423,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M0 1000L0 598 402 598 242 758Q350 865 500 865 625 865 722 790T852 598L990 598Q955 771 817 886T500 1000Q293 1000 147 854ZM10 402Q45 228 183 114T500 0Q707 0 854 146L1000 0 1000 402 598 402 758 242Q650 135 500 135 375 135 278 210T148 402L10 402Z",
+        "width": 1000
+      },
+      "search": [
+        "arrows-cw"
+      ]
+    },
+    {
+      "uid": "4840d417774a4380c6422a6b4f3095b9",
+      "css": "download-alt",
+      "code": 57539,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M0 1000L0 865 1000 865 1000 1000 0 1000ZM88 414L316 414 316 0 686 0 686 414 914 414 500 799Z",
+        "width": 1000
+      },
+      "search": [
+        "download-alt"
+      ]
+    },
+    {
+      "uid": "88ef278191606da708459f3627bec34f",
+      "css": "video-alt",
+      "code": 57577,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M0 1000L0 0 883 0 883 1000 0 1000ZM45 881L154 881 154 799 45 799 45 881ZM45 697L154 697 154 613 45 613 45 697ZM45 512L154 512 154 430 45 430 45 512ZM45 326L154 326 154 244 45 244 45 326ZM45 143L154 143 154 60 45 60 45 143ZM201 969L682 969 682 533 201 533 201 969ZM201 502L682 502 682 66 201 66 201 502ZM729 881L838 881 838 799 729 799 729 881ZM729 697L838 697 838 613 729 613 729 697ZM729 512L838 512 838 430 729 430 729 512ZM729 326L838 326 838 244 729 244 729 326ZM729 143L838 143 838 60 729 60 729 143Z",
+        "width": 883
+      },
+      "search": [
+        "video-alt"
+      ]
+    },
+    {
+      "uid": "560b5107d22e0e8f1e11f105e6ebb52c",
+      "css": "spin6",
+      "code": 59449,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M855 841C666 1031 335 1013 150 828-40 638-50 334 122 133 133 120 143 107 157 99 193 76 242 81 274 112 304 143 309 188 290 224 285 233 281 239 274 246 134 397 129 625 266 762 419 915 673 883 808 728 914 606 950 431 885 277 802 79 580-14 375 55L375 54C611-28 867 78 963 306 1034 473 1000 661 891 799 880 814 868 828 855 841Z",
+        "width": 1000
+      },
+      "search": [
+        "spin6"
       ]
     }
   ]
